# itIsNotAGame

./: CMakeLists.txt  README.md  backup.txt  backupFile.txt  cacVandeGapphai.txt
assets/data/: ChatChar.txt  Items.json
include/: DATA.hpp  DataBalance.hpp  DataSetting.hpp  DisplayManager.hpp  Element.hpp  Elite.hpp  EndGameMenu.hpp  Enemy.hpp  EnemyTexture.hpp  Game.hpp  Inventory.hpp  Item.hpp  Player.hpp  RandomGenerator.hpp  SettingMenu.hpp  SoundManager.hpp  TutorialMenu.hpp
src/: DataSetting.cpp  DisplayManager.cpp  Element.cpp  Elite.cpp  EndGameMenu.cpp  Enemy.cpp  Game.cpp  Inventory.cpp  Item.cpp  Player.cpp  RandomGenerator.cpp  SettingMenu.cpp  SoundManager.cpp  TutorialMenu.cpp  main.cpp
